--- a/documentscanner/src/main/res/values/colors.xml
+++ b/documentscanner/src/main/res/values/colors.xml
@@ -9,12 +9,14 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#34495e</color>
+    <color name="colorPrimaryDark">#34495e</color>
+
     <color name="colorAccent">#D81B60</color>
     <color name="halfTransparentBackground">#aacccccc</color>
 
     // Scanner Colors
+    <color name="red">#F44336</color>
     <color name="colorGrey">#cccccc</color>
     <color name="blue">#ff59a9ff</color>
     <color name="orange">#ffff900d</color>
